Добавлена сетка и исправления в базовой стилизации

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
   	<header class="main-header">
       <div class="top-menu">
-      	<a class="main-header-logo" href="#">Техномарт</a>
+      	<a class="main-header-logo" href="index.html">Техномарт</a>
         <form class="search-form" action="https://echo.htmlacademy.ru">
           <label class="visually-hidden" for="search">Поиск по сайту</label>
           <input type="search" name="search" id="search" placeholder="Поиск:">
@@ -21,205 +21,219 @@
         <button class="make-order">Оформить заказ</button>
        </div> 
        <div class="bottom-menu">
-        <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-        <div class="info">
-          <a href="tel:+78125550555" class="main-header-phone">+7(812)555-05-55</a>
-          <p class="main-header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        </div>
-        <div class="user-navigation">
-          <a class="login-link" href="#">Войти</a>
-          <a class="registration-link" href="#">Регистрация</a>
-        </div>
-        <nav class="main-navigation">
+         <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+         <div class="info">
+           <a href="tel:+78125550555" class="main-header-phone">+7 (812) 555-05-55</a>
+           <p class="main-header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+         </div>
+         <div class="user-navigation">
+           <a class="login-link" href="#">Войти</a>
+           <a class="registration-link" href="#">Регистрация</a>
+         </div>
+       </div>
+       <nav class="main-navigation">
           <ul class="site-navigation">
-            <li><a href="#">Главная</a></li>
+            <li><a href="index.html">Главная</a></li>
             <li><a href="#">Компания</a></li>
-            <li><a href="#">Каталог</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="#">Спецпредложения</a></li>
             <li><a href="#">Доставка</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
-      </div>
     </header>
     <main>
-      <section class="features">
-        <h2 class="visually-hidden">Услуги и условия</h2>
-        <div class="item materials">
-          <h3>Материалы</h3>
-          <a href="#">На любой вкус</a>
-        </div>
-        <div class="item instrument">
-          <h3>Инструмент</h3>
-          <a href="#">На все случаи</a>
-        </div>
-        <div class="item tech">
-          <h3>Техника</h3>
-          <a href="#">Для стройки</a>
-        </div>
-        <div class="slider">
-          <ul class="slider-items">
-            <li>
-              <h3>Дрели</h3>
-              <p>Соседям в радость!</p>
-              <a class="link" href="#">Открыть каталог</a>
-            </li>
-            <li class="visually-hidden">
-              <h3>Перфораторы</h3>
-              <p>Настоящие мужские игрушки</p>
-              <a class="link" href="#">Открыть каталог</a>
-            </li>
-          </ul>
-          <button class="button slider-back" type="button">Назад</button>
-          <button class="button slider-next" type="button">Вперед</button>
-        </div>
-        <div class="item sale">
-          <h3>Скидки 50%</h3>
-          <a href="#">На 350 товаров</a>
-        </div>
-        <div class="item delivery">
-          <h3>Доставка</h3>
-          <a href="#">Бесплатно</a>
-        </div>
-      </section>
-      <section class="popular">
-      	<div class="section-top">
-          <h2>Популярные товары:</h2>
-          <a class="link" href="#">Все популярные товары</a>
-        </div>
-        <ul>
-          <li>
-          	<img src="img/popular-1.jpg" alt="Фото перфоратора">
-            <h3>Перфоратор BOSCH BFG 9000</h3>
-            <span class="past-price">32500 Р.</span>
-            <span class="actual-price">25500 Р.</span>
-            <div class="item-buttons visually-hidden">
-              <a class="buy" href="#">Купить</a>
-              <a class="bookmark-btn" href="#">В закладки</a>
-            </div>
-          </li>
-          <li>
-          	<img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <span class="past-price">22500 Р.</span>
-            <span class="actual-price">15500 Р.</span>
-            <div class="item-buttons visually-hidden">
-              <a class="buy" href="#">Купить</a>
-              <a class="bookmark-btn" href="#">В закладки</a>
-            </div>
-          </li>    
-          <li>
-          	<img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <span class="past-price">30500 Р.</span>
-            <span class="actual-price">25500 Р.</span>
-            <div class="item-buttons visually-hidden">
-              <a class="buy" href="#">Купить</a>
-              <a class="bookmark-btn" href="#">В закладки</a>
-            </div>
-          </li>   
-          <li>
-          	<img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
-            <h3>Перфоратор BOSCH BFG 2000</h3>
-            <span class="actual-price">12500 Р.</span>
-            <div class="item-buttons visually-hidden">
-              <a class="buy" href="#">Купить</a>
-              <a class="bookmark-btn" href="#">В закладки</a>
-            </div>
-          </li>
-        </ul>
-      </section>
-      <section class="brands">
-        <div class="section-top">
-          <h2>Популярные производители:</h2>
-          <a class="link" href="#">Все производители</a>
-        </div>
-        <ul class="brands-list">
-          <li>
-            <a href="#"><img src="img/bosch.jpg" alt="Bosch"></a>
-          </li>
-          <li>            
-            <a href="#"><img src="img/makita.jpg" alt="Makita"></a>
-          </li>
-          <li>            
-            <a href="#"><img src="img/dewalt.jpg" alt="DeWALT"></a>
-          </li>
-          <li>            
-            <a href="#"><img src="img/interskol.jpg" alt="Интерскол"></a>
-          </li>
-          <li>            
-            <a href="#"><img src="img/hitachi.jpg" alt="Hitachi"></a>
-          </li>
-          <li>            
-            <a href="#"><img src="img/lg.jpg" alt="LG"></a>
-          </li>
-          <li>            
-            <a href="#"><img src="img/aeg.jpg" alt="AEG Power Solutions"></a>
-          </li>
-          <li>            
-            <a href="#"><img src="img/metabo.jpg" alt="Metabo work. don't play."></a>
-          </li>
-        </ul>
-      </section>
-      <section class="services">
-        <h2>Сервисы</h2>
-          <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        <div class="slider-services">          
-          <ul class="slider-options">
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Гарантия</a></li>
-            <li><a href="#">Кредит</a></li>
-          </ul>         
-          <div class="slider-content">
-            <ul>
+      <div class="container">
+        <section class="features">
+          <h2 class="visually-hidden">Услуги и условия</h2>
+          <div class="item materials">
+            <h3>Материалы</h3>
+            <a href="#">На любой вкус</a>
+          </div>
+          <div class="item instrument">
+            <h3>Инструмент</h3>
+            <a href="#">На все случаи</a>
+          </div>
+          <div class="item tech">
+            <h3>Техника</h3>
+            <a href="#">Для стройки</a>
+          </div>
+          <div class="slider">
+            <ul class="slider-items">
               <li>
-                <h3>Доставка</h3>
-                <p>Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
+                <h3>Дрели</h3>
+                <p>Соседям в радость!</p>
+                <a class="link" href="#">Открыть каталог</a>
               </li>
               <li class="visually-hidden">
-                <h3>Гарантия</h3>
-                <p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.</p>
-              </li>
-              <li class="visually-hidden">
-                <h3>Кредит</h3>
-                <p>Залезть в долговую яму стало проще!<br> Кредитные консультанты придут вам на помощь.</p>
-                <a class="link credit" href="#">Отправить заявку</a>
+                <h3>Перфораторы</h3>
+                <p>Настоящие мужские игрушки</p>
+                <a class="link" href="#">Открыть каталог</a>
               </li>
             </ul>
+            <button class="button slider-back visually-hidden" type="button">Назад</button>
+            <button class="button slider-next visually-hidden" type="button">Вперед</button>
           </div>
-        </div>
-      </section>
-      <section class="about">
-      	<h2 class="visually-hidden">О компании</h2>
-        <div class="company">
-          <h3>Компания «Техномарт»</h3>
-          <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-          <p>Мы можем доставить ваш товар в самые отдаленные точки России!Техномарт работает со многими транспортными компаниями:</p> 
-          <ul class="transport-list">
-            <li>Деловые линии</li>
-            <li>Автотрейдинг</li>
-            <li>ЖелДорЭкспедиция</li>
+          <div class="side-items">
+            <div class="item sale">
+              <h3>Скидки 50%</h3>
+              <a href="#">На 350 товаров</a>
+            </div>
+            <div class="item delivery">
+              <h3>Доставка</h3>
+              <a href="#">Бесплатно</a>
+            </div>
+          </div>
+        </section>
+        <section class="popular">
+        	<div class="section-top">
+              <h2>Популярные товары:</h2>
+              <a class="link" href="#">Все популярные товары</a>
+            </div>
+          <ul>
+            <li>
+              <div class="item-img">
+            	<img src="img/popular-1.jpg" alt="Фото перфоратора">
+              </div>
+              <h3>Перфоратор BOSCH BFG 9000</h3>
+              <span class="past-price">32500 Р.</span>
+              <span class="actual-price">25500 Р.</span>
+              <div class="item-buttons visually-hidden">
+                <a class="buy" href="#">Купить</a>
+                <a class="bookmark-btn" href="#">В закладки</a>
+              </div>
+            </li>
+            <li>
+              <div class="item-img">
+            	<img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
+              </div>
+              <h3>Перфоратор BOSCH BFG 3000</h3>
+              <span class="past-price">22500 Р.</span>
+              <span class="actual-price">15500 Р.</span>
+              <div class="item-buttons visually-hidden">
+                <a class="buy" href="#">Купить</a>
+                <a class="bookmark-btn" href="#">В закладки</a>
+              </div>
+            </li>    
+            <li>
+              <div class="item-img">
+            	<img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
+              </div>
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <span class="past-price">30500 Р.</span>
+              <span class="actual-price">25500 Р.</span>
+              <div class="item-buttons visually-hidden">
+                <a class="buy" href="#">Купить</a>
+                <a class="bookmark-btn" href="#">В закладки</a>
+              </div>
+            </li>   
+            <li class="new-drill">
+              <div class="item-img">
+            	<img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
+              </div>
+              <h3>Перфоратор BOSCH BFG 2000</h3>
+              <span class="actual-price">12500 Р.</span>
+              <div class="item-buttons visually-hidden">
+                <a class="buy" href="#">Купить</a>
+                <a class="bookmark-btn" href="#">В закладки</a>
+              </div>
+            </li>
           </ul>
-          <a class="link about-company" href="#">Подробнее о компании</a>
-        </div>
-        <div class="about-contacts">
-          <h3>Контакты</h3>
-          <p>Вы можете забрать товар сами, заехав в наш офис:</p>          
-          <a class="map" href="#"><img src="img/map.jpg" alt="Посмотреть наше местоположение"></a>          
-          <a class="link about-form" href="#">Заблудились? Напишите нам!</a>
-        </div>
-      </section>
+        </section>
+        <section class="brands">
+          <div class="section-top">
+            <h2>Популярные производители:</h2>
+            <a class="link" href="#">Все производители</a>
+          </div>
+          <ul class="brands-list">
+            <li>
+              <a href="#"><img src="img/bosch.jpg" alt="Bosch"></a>
+            </li>
+            <li>            
+              <a href="#"><img src="img/makita.jpg" alt="Makita"></a>
+            </li>
+            <li>            
+              <a href="#"><img src="img/dewalt.jpg" alt="DeWALT"></a>
+            </li>
+            <li>            
+              <a href="#"><img src="img/interskol.jpg" alt="Интерскол"></a>
+            </li>
+            <li>            
+              <a href="#"><img src="img/hitachi.jpg" alt="Hitachi"></a>
+            </li>
+            <li>            
+              <a href="#"><img src="img/lg.jpg" alt="LG"></a>
+            </li>
+            <li>            
+              <a href="#"><img src="img/aeg.jpg" alt="AEG Power Solutions"></a>
+            </li>
+            <li>            
+              <a href="#"><img src="img/metabo.jpg" alt="Metabo work. don't play."></a>
+            </li>
+          </ul>
+        </section>
+        <section class="services">
+          <h2>Сервисы</h2>
+            <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+          <div class="slider-services">          
+            <ul class="slider-options">
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Гарантия</a></li>
+              <li><a href="#">Кредит</a></li>
+            </ul>         
+            <div class="slider-content">
+              <ul>
+                <li>
+                  <h3>Доставка</h3>
+                  <p>Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
+                </li>
+                <li class="visually-hidden">
+                  <h3>Гарантия</h3>
+                  <p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь   сами.</p>
+                </li>
+                <li class="visually-hidden">
+                  <h3>Кредит</h3>
+                  <p>Залезть в долговую яму стало проще!<br> Кредитные консультанты придут вам на помощь.</p>
+                  <a class="link credit" href="#">Отправить заявку</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="about">
+        	<h2 class="visually-hidden">О компании</h2>
+          <div class="company">
+            <h3>Компания «Техномарт»</h3>
+            <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+            <p>Мы можем доставить ваш товар в самые отдаленные точки России!Техномарт работает со многими транспортными компаниями:</p> 
+            <ul class="transport-list">
+              <li>Деловые линии</li>
+              <li>Автотрейдинг</li>
+              <li>ЖелДорЭкспедиция</li>
+            </ul>
+            <a class="link" href="#">Подробнее о компании</a>
+          </div>
+          <div class="about-contacts">
+            <h3>Контакты</h3>
+            <p>Вы можете забрать товар сами, заехав в наш офис:</p>          
+            <a class="map" href="#"><img src="img/map.jpg" alt="Посмотреть наше местоположение"></a>          
+            <a class="link" href="#">Заблудились? Напишите нам!</a>
+          </div>
+        </section>
+      </div>
     </main>
     <footer class="main-footer">
       <div class="footer-information">
-        <a class="main-footer-logo" href="#">Техномарт</a>
-        <p class="main-footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7(812)555-05-55</p>
+      	<div class="footer-company">
+          <a href="index.html">Техномарт</a>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
+        </div>
         <div class="footer-navigation">
           <ul class="main-footer-navigation">
             <li><a href="#">Компания</a></li>
             <li><a href="#">Новости</a></li>
-            <li><a href="#">Каталог</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
             <li><a href="#">Доставка</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
@@ -239,8 +253,10 @@
           <li><a class="fb" href="#">Facebook</a></li>
           <li><a class="insta" href="#">Instagram</a></li>
         </ul>
-        <p class="feedback">Обратная связь: <a href="#">mail@htmlacademy.ru</a></p>
-        <p class="developer">Разработано — <a href="#">htmlacademy.ru</a></p>
+        <div class="developer">
+          <p>Обратная связь: <a href="#">mail@htmlacademy.ru</a></p>
+          <p>Разработано — <a href="#">htmlacademy.ru</a></p>
+        </div>
       </div>
     </footer>
     <section class="modal modal-feedback">
