--- a/index.html
+++ b/index.html
@@ -3,45 +3,59 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|PT+Sans|PT+Sans+Narrow" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700i|PT+Sans|PT+Sans+Narrow" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-  	<header class="main-header">
+    <header class="main-header">
       <div class="top-menu">
-      	<a class="main-header-logo" href="index.html">Техномарт</a>
-        <form class="search-form" action="https://echo.htmlacademy.ru">
-          <label class="visually-hidden" for="search">Поиск по сайту</label>
-          <input type="search" name="search" id="search" placeholder="Поиск:">
-          <input type="submit" value="Найти">
-        </form>
-        <a class="bookmark" href="#">Закладки: 0</a>
-        <a class="cart" href="#">Корзина: 0</a>
-        <button class="make-order">Оформить заказ</button>
-       </div> 
-       <div class="bottom-menu">
-         <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-         <div class="info">
-           <a href="tel:+78125550555" class="main-header-phone">+7 (812) 555-05-55</a>
-           <p class="main-header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-         </div>
-         <div class="user-navigation">
-           <a class="login-link" href="#">Войти</a>
-           <a class="registration-link" href="#">Регистрация</a>
-         </div>
-       </div>
-       <nav class="main-navigation">
-          <ul class="site-navigation">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="#">Компания</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Спецпредложения</a></li>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-        </nav>
+        <div class="container">
+          <a class="main-header-logo" href="index.html">Техномарт</a>
+          <form class="search-form" action="https://echo.htmlacademy.ru">
+            <label class="visually-hidden" for="search">Поиск по сайту</label>
+            <input type="search" name="search" id="search" placeholder="Поиск:">
+            <input type="submit" value="Найти">
+          </form>
+          <div class="bookmark">
+            <a href="#">Закладки: 0</a>
+          </div>
+          <div class="cart">
+            <a href="#">Корзина: 0</a>
+          </div>
+          <button class="make-order">Оформить заказ</button>
+        </div> 
+      </div>
+      <div class="bottom-menu">
+        <div class="container">
+          <h1>Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
+          <div class="info">
+            <a href="tel:+78125550555" class="main-header-phone">+7 (812) 555-05-55</a>
+            <p class="main-header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          </div>
+          <div class="user-navigation">
+            <div class="login-link">
+              <a href="#">Войти</a>
+            </div>
+            <div class="registration-link">
+              <a href="#">Регистрация</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <nav class="main-navigation">
+           <ul class="site-navigation">
+             <li><a href="index.html">Главная</a></li>
+             <li><a href="#">Компания</a></li>
+             <li><a href="catalog.html">Каталог</a></li>
+             <li><a href="#">Новости</a></li>
+             <li><a href="#">Спецпредложения</a></li>
+             <li><a href="#">Доставка</a></li>
+             <li><a href="#">Контакты</a></li>
+           </ul>
+         </nav>
+      </div>
     </header>
     <main>
       <div class="container">
@@ -87,14 +101,14 @@
           </div>
         </section>
         <section class="popular">
-        	<div class="section-top">
+          <div class="section-top">
               <h2>Популярные товары:</h2>
               <a class="link" href="#">Все популярные товары</a>
             </div>
           <ul>
             <li>
               <div class="item-img">
-            	<img src="img/popular-1.jpg" alt="Фото перфоратора">
+              <img src="img/popular-1.jpg" alt="Фото перфоратора">
               </div>
               <h3>Перфоратор BOSCH BFG 9000</h3>
               <span class="past-price">32500 Р.</span>
@@ -106,7 +120,7 @@
             </li>
             <li>
               <div class="item-img">
-            	<img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
+              <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
               </div>
               <h3>Перфоратор BOSCH BFG 3000</h3>
               <span class="past-price">22500 Р.</span>
@@ -118,7 +132,7 @@
             </li>    
             <li>
               <div class="item-img">
-            	<img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
+              <img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
               </div>
               <h3>Перфоратор BOSCH BFG 6000</h3>
               <span class="past-price">30500 Р.</span>
@@ -130,7 +144,7 @@
             </li>   
             <li class="new-drill">
               <div class="item-img">
-            	<img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
+              <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
               </div>
               <h3>Перфоратор BOSCH BFG 2000</h3>
               <span class="actual-price">12500 Р.</span>
@@ -173,7 +187,10 @@
             </li>
           </ul>
         </section>
+      </div>
+      
         <section class="services">
+          <div class="container">
           <h2>Сервисы</h2>
             <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <div class="slider-services">          
@@ -200,9 +217,12 @@
               </ul>
             </div>
           </div>
+        </div>  
         </section>
+      
+      <div class="container">
         <section class="about">
-        	<h2 class="visually-hidden">О компании</h2>
+          <h2 class="visually-hidden">О компании</h2>
           <div class="company">
             <h3>Компания «Техномарт»</h3>
             <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
@@ -225,37 +245,43 @@
     </main>
     <footer class="main-footer">
       <div class="footer-information">
-      	<div class="footer-company">
-          <a href="index.html">Техномарт</a>
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
-        </div>
-        <div class="footer-navigation">
-          <ul class="main-footer-navigation">
-            <li><a href="#">Компания</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-          <ul class="extra-footer-navigation">
-            <li><a href="#">Материалы</a></li>
-            <li><a href="#">Техника</a></li>
-            <li><a href="#">Инструмент</a></li>
-            <li><a href="#">Спецпредложения</a></li>
-          </ul>      
+        <div class="container">
+          <div class="footer-company">
+            <a href="index.html">Техномарт</a>
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
+          </div>
+          <div class="footer-navigation">
+            <ul class="main-footer-navigation">
+              <li><a href="#">Компания</a></li>
+              <li><a href="#">Новости</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+            <ul class="extra-footer-navigation">
+              <li><a href="#">Материалы</a></li>
+              <li><a href="#">Техника</a></li>
+              <li><a href="#">Инструмент</a></li>
+              <li><a href="#">Спецпредложения</a></li>
+            </ul>      
+          </div>
         </div>
       </div>
       <div class="copyright">
-        <p class="rights">© 2010–2017 Компания «Техномарт»
-        Все права защищены</p>
-        <ul class="social">
-          <li><a class="vk" href="#">Вконтакте</a></li>
-          <li><a class="fb" href="#">Facebook</a></li>
-          <li><a class="insta" href="#">Instagram</a></li>
-        </ul>
-        <div class="developer">
-          <p>Обратная связь: <a href="#">mail@htmlacademy.ru</a></p>
-          <p>Разработано — <a href="#">htmlacademy.ru</a></p>
+        <div class="container">
+          <p class="rights">© 2010–2017 Компания «Техномарт»
+          Все права защищены</p>
+          <div class="social">
+            <ul>
+              <li><div class="vk"><a href="#">Вконтакте</a></div></li>
+              <li><div class="fb"><a href="#">Facebook</a></div></li>
+              <li><div class="insta"><a href="#">Instagram</a></div></li>
+            </ul>
+          </div>
+          <div class="developer">
+            <p>Обратная связь: <a href="#">mail@htmlacademy.ru</a></p>
+            <p>Разработано — <a href="#">htmlacademy.ru</a></p>
+          </div>
         </div>
       </div>
     </footer>
